Bug 1245666 - Image text wrap settings and shorter control panel
(cherry picked from commit 91f640db932b01a8ab4dfc515eb7926c351dfdd5)

--- a/add-on/panels/css/slideshow.css
+++ b/add-on/panels/css/slideshow.css
@@ -23,7 +23,7 @@ body {
 .slides {
   display: block;
   width: 100%;
-  height: 370px;
+  height: 390px;
   overflow: hidden;
   white-space: nowrap;
 }
@@ -37,8 +37,8 @@ body {
 }
 
 .control-panel {
-  height: 80px;
-  /*background: #fff;*/
+  height: 60px;
+  background: #fff;
   width: 100%;
 }
 
@@ -50,7 +50,7 @@ body {
   display: block;
   padding: 0px;
   position: absolute;
-  bottom: 30px;
+  bottom: 20px;
   background-color: transparent;
   background-image: url(../../shared/img/arrow-01.svg);
   background-repeat: no-repeat;
@@ -89,9 +89,8 @@ body {
 .slide-layout {
   padding-top: 80px;
   padding-left: 50px;
-  /*padding-right: 45px;*/
   padding-bottom: 20px;
-  width: 300px;
+  width: 600px;
 }
 
 .slide-layout h2 {
@@ -114,11 +113,13 @@ body {
   display: block;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  position: absolute;
   border: none;
   background-color: transparent;
   background-repeat: no-repeat;
+  background-position: center;
   padding: 0;
+  float: right;
+  margin-top: -20px;
 }
 .slide1 {
   height: 100%;
@@ -126,16 +127,11 @@ body {
   background: #06a6e0;
 }
 
-.slide1 > .slide-layout {
-  width:  285px;
-}
-
 .slide1-image {
   background-image: url(../../shared/img/firefox-hello_tour-slide-01.svg);
-  height: 320px;
-  width: 320px;
-  top: 40px;
-  right: 20px;
+  height: 260px;
+  width: 295px;
+  background-size: 310px 310px;
 }
 
 .slide2 {
@@ -145,16 +141,14 @@ body {
 }
 
 .slide2 > .slide-layout {
-  width:  340px;
-  padding-top: 120px;
+  padding-top: 100px;
 }
 
 .slide2-image {
   background-image: url(../../shared/img/firefox-hello_tour-slide-02.svg);
-  height: 320px;
-  width: 320px;
-  top: 40px;
-  right: 10px;
+  height: 245px;
+  width: 245px;
+  background-size: 320px 320px;
 }
 
 .slide3 {
@@ -165,10 +159,9 @@ body {
 
 .slide3-image {
   background-image: url(../../shared/img/firefox-hello_tour-slide-03.svg);
-  height: 320px;
-  width: 320px;
-  top: 40px;
-  right: 20px;
+  height: 260px;
+  width: 260px;
+  background-size: 310px 310px;
 }
 
 .slide4 {
@@ -177,15 +170,9 @@ body {
   background: #7ec24c;
 }
 
-.slide4 > .slide-layout {
-  width:  320px;
-}
-
 .slide4-image {
   background-image: url(../../shared/img/firefox-hello_tour-slide-04.svg);
-  height: 300px;
-  width: 300px;
-  top: 40px;
-  right: 25px;
-  background-size: 340px 340px;
+  height: 240px;
+  width: 240px;
+  background-size: 320px 320px;
 }
